--- a/dhtml/with-modules/app.html
+++ b/dhtml/with-modules/app.html
@@ -9,7 +9,7 @@
     <meta name="author" content="lab-boole">
     <title>Connect4 Game</title>
     <link rel="stylesheet" href="css/app.css">
-    <script type="module" src="app.js"></script>
+    <script type="module" src="js/app.js"></script>
 </head>
 
 <body class="body">
