--- a/dhtml/with-modules/app.html
+++ b/dhtml/with-modules/app.html
@@ -21,7 +21,7 @@
         <nav class="nav col-3">
             <ul class="nav__list">
                 <li class="nav__item">
-                    <button id="new-game" class="button" onclick="newGame()">
+                    <button id="new-game" class="button">
                         <svg class="button__icon button__icon--mr" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M17.65 6.35C16.2 4.9 14.21 4 12 4C7.57999 4 4.00999 7.58 4.00999 12C4.00999 16.42 7.57999 20 12 20C15.73 20 18.84 17.45 19.73 14H17.65C16.83 16.33 14.61 18 12 18C8.68999 18 5.99999 15.31 5.99999 12C5.99999 8.69 8.68999 6 12 6C13.66 6 15.14 6.69 16.22 7.78L13 11H20V4L17.65 6.35Z" fill="#57C3FF"/>
                         </svg>
@@ -50,7 +50,7 @@
     
         <main class="board__wrapper">
             <div class="board">
-                <div id="column-0" class="board__column" onclick="dropToken(0)">
+                <div id="column-0" class="board__column">
                     <div id="cell-05" class="board__cell">
                         <input id="checker-05" type="checkbox" class="board__input" name="checker-05" disabled>
                         <label for="checker-05" class="board__checker"></label>
@@ -76,7 +76,7 @@
                         <label for="checker-00" class="board__checker"></label>
                     </div>
                 </div>
-                <div id="column-1" class="board__column" onclick="dropToken(1)">
+                <div id="column-1" class="board__column">
                     <div id="cell-15" class="board__cell">
                         <input id="checker-15" type="checkbox" class="board__input" name="checker-15" disabled>
                         <label for="checker-15" class="board__checker"></label>
@@ -102,7 +102,7 @@
                         <label for="checker-10" class="board__checker"></label>
                     </div>
                 </div>
-                <div id="column-2" class="board__column" onclick="dropToken(2)">
+                <div id="column-2" class="board__column">
                     <div id="cell-25" class="board__cell">
                         <input id="checker-25" type="checkbox" class="board__input" name="checker-25" disabled>
                         <label for="checker-25" class="board__checker"></label>
@@ -128,7 +128,7 @@
                         <label for="checker-20" class="board__checker"></label>
                     </div>
                 </div>
-                <div id="column-3" class="board__column" onclick="dropToken(3)">
+                <div id="column-3" class="board__column">
                     <div id="cell-35" class="board__cell">
                         <input id="checker-35" type="checkbox" class="board__input" name="checker-35" disabled>
                         <label for="checker-35" class="board__checker"></label>
@@ -154,7 +154,7 @@
                         <label for="checker-30" class="board__checker"></label>
                     </div>
                 </div>
-                <div id="column-4" class="board__column" onclick="dropToken(4)">
+                <div id="column-4" class="board__column">
                     <div id="cell-45" class="board__cell">
                         <input id="checker-45" type="checkbox" class="board__input" name="checker-45" disabled>
                         <label for="checker-45" class="board__checker"></label>
@@ -180,7 +180,7 @@
                         <label for="checker-40" class="board__checker"></label>
                     </div>
                 </div>
-                <div id="column-5" class="board__column" onclick="dropToken(5)">
+                <div id="column-5" class="board__column">
                     <div id="cell-55" class="board__cell">
                         <input id="checker-55" type="checkbox" class="board__input" name="checker-55" disabled>
                         <label for="checker-55" class="board__checker"></label>
@@ -206,7 +206,7 @@
                         <label for="checker-50" class="board__checker"></label>
                     </div>
                 </div>
-                <div id="column-6" class="board__column" onclick="dropToken(6)">
+                <div id="column-6" class="board__column">
                     <div id="cell-65" class="board__cell">
                         <input id="checker-65" type="checkbox" class="board__input" name="checker-65" disabled>
                         <label for="checker-65" class="board__checker"></label>
