--- a/dhtml/with-modules/index.html
+++ b/dhtml/with-modules/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="lab-boole">
     <title>Connect4 Game</title>
     <link rel="stylesheet" href="css/app.css">
-    <script type="module" src="js/app.js"></script>
+    <script type="module" src="js/DoubleDispatch/view/GameView.js"></script>
 </head>
 
 <body class="body">
@@ -29,15 +29,6 @@
                     </button>
                 </li>
                 <li class="nav__item">
-                    <button id="options-game" class="button">
-                        <svg class="button__icon button__icon--mr" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path opacity="0.3" d="M18.5978 8.6L17.9367 7.39L16.7372 7.9L15.7361 8.33L14.8767 7.63C14.5083 7.33 14.1211 7.09 13.715 6.92L12.7139 6.49L12.5628 5.36L12.3833 4H11.0611L10.8817 5.35L10.7306 6.48L9.72944 6.92C9.34222 7.09 8.955 7.33 8.54889 7.65L7.69889 8.33L6.70722 7.91L5.50778 7.39L4.84666 8.6L5.86666 9.44L6.70722 10.14L6.575 11.27C6.54666 11.57 6.52778 11.8 6.52778 12C6.52778 12.2 6.54666 12.43 6.575 12.73L6.70722 13.86L5.86666 14.56L4.84666 15.4L5.50778 16.61L6.70722 16.1L7.70833 15.67L8.56778 16.37C8.93611 16.67 9.32333 16.91 9.72944 17.08L10.7306 17.51L10.8817 18.64L11.0611 20H12.3739L12.5533 18.65L12.7044 17.52L13.7056 17.09C14.0928 16.92 14.48 16.68 14.8861 16.36L15.7361 15.68L16.7183 16.1L17.9178 16.61L18.5789 15.4L17.5589 14.56L16.7183 13.86L16.8506 12.73C16.8883 12.42 16.8978 12.21 16.8978 12C16.8978 11.79 16.8789 11.57 16.8506 11.27L16.7183 10.14L17.5589 9.44L18.5978 8.6V8.6ZM11.7222 16C9.635 16 7.94444 14.21 7.94444 12C7.94444 9.79 9.635 8 11.7222 8C13.8094 8 15.5 9.79 15.5 12C15.5 14.21 13.8094 16 11.7222 16Z" fill="#2D363C"/>
-                            <path d="M18.7394 12.98C18.7772 12.66 18.8055 12.34 18.8055 12C18.8055 11.66 18.7772 11.34 18.7394 11.02L20.7322 9.37C20.9117 9.22 20.9589 8.95 20.8455 8.73L18.9567 5.27C18.8717 5.11 18.7111 5.02 18.5411 5.02C18.4844 5.02 18.4278 5.03 18.3805 5.05L16.0289 6.05C15.5378 5.65 15.0089 5.32 14.4328 5.07L14.0739 2.42C14.0455 2.18 13.8472 2 13.6111 2H9.83333C9.59721 2 9.39888 2.18 9.37055 2.42L9.01166 5.07C8.43555 5.32 7.90666 5.66 7.41555 6.05L5.06388 5.05C5.00721 5.03 4.95055 5.02 4.89388 5.02C4.73333 5.02 4.57277 5.11 4.48777 5.27L2.59888 8.73C2.4761 8.95 2.53277 9.22 2.71221 9.37L4.70499 11.02C4.66721 11.34 4.63888 11.67 4.63888 12C4.63888 12.33 4.66721 12.66 4.70499 12.98L2.71221 14.63C2.53277 14.78 2.48555 15.05 2.59888 15.27L4.48777 18.73C4.57277 18.89 4.73333 18.98 4.90333 18.98C4.95999 18.98 5.01666 18.97 5.06388 18.95L7.41555 17.95C7.90666 18.35 8.43555 18.68 9.01166 18.93L9.37055 21.58C9.39888 21.82 9.59721 22 9.83333 22H13.6111C13.8472 22 14.0455 21.82 14.0739 21.58L14.4328 18.93C15.0089 18.68 15.5378 18.34 16.0289 17.95L18.3805 18.95C18.4372 18.97 18.4939 18.98 18.5505 18.98C18.7111 18.98 18.8717 18.89 18.9567 18.73L20.8455 15.27C20.9589 15.05 20.9117 14.78 20.7322 14.63L18.7394 12.98V12.98ZM16.8694 11.27C16.9072 11.58 16.9167 11.79 16.9167 12C16.9167 12.21 16.8978 12.43 16.8694 12.73L16.7372 13.86L17.5778 14.56L18.5978 15.4L17.9367 16.61L16.7372 16.1L15.755 15.68L14.905 16.36C14.4989 16.68 14.1117 16.92 13.7244 17.09L12.7233 17.52L12.5722 18.65L12.3833 20H11.0611L10.8817 18.65L10.7305 17.52L9.72944 17.09C9.32333 16.91 8.94555 16.68 8.56777 16.38L7.70833 15.68L6.70721 16.11L5.50777 16.62L4.84666 15.41L5.86666 14.57L6.70721 13.87L6.57499 12.74C6.54666 12.43 6.52777 12.2 6.52777 12C6.52777 11.8 6.54666 11.57 6.57499 11.27L6.70721 10.14L5.86666 9.44L4.84666 8.6L5.50777 7.39L6.70721 7.9L7.68944 8.32L8.53944 7.64C8.94555 7.32 9.33277 7.08 9.71999 6.91L10.7211 6.48L10.8722 5.35L11.0611 4H12.3739L12.5533 5.35L12.7044 6.48L13.7055 6.91C14.1117 7.09 14.4894 7.32 14.8672 7.62L15.7267 8.32L16.7278 7.89L17.9272 7.38L18.5883 8.59L17.5778 9.44L16.7372 10.14L16.8694 11.27ZM11.7222 8C9.63499 8 7.94444 9.79 7.94444 12C7.94444 14.21 9.63499 16 11.7222 16C13.8094 16 15.5 14.21 15.5 12C15.5 9.79 13.8094 8 11.7222 8ZM11.7222 14C10.6833 14 9.83333 13.1 9.83333 12C9.83333 10.9 10.6833 10 11.7222 10C12.7611 10 13.6111 10.9 13.6111 12C13.6111 13.1 12.7611 14 11.7222 14Z" fill="#57C3FF"/>
-                        </svg>
-                        <span class="button__txt">Options</span>
-                    </button>
-                </li>
-                <li class="nav__item">
                     <button id="save-game" class="button">
                         <svg class="button__icon button__icon--mr" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M19 6.41L17.59 5L12 10.59L6.41 5L5 6.41L10.59 12L5 17.59L6.41 19L12 13.41L17.59 19L19 17.59L13.41 12L19 6.41Z" fill="#57C3FF"/>
@@ -53,44 +44,36 @@
                         <span class="button__txt">Recover Game</span>
                     </button>
                 </li>
-                <li class="nav__item">
-                    <button id="exit-game" class="button">
-                        <svg class="button__icon button__icon--mr" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M19 6.41L17.59 5L12 10.59L6.41 5L5 6.41L10.59 12L5 17.59L6.41 19L12 13.41L17.59 19L19 17.59L13.41 12L19 6.41Z" fill="#57C3FF"/>
-                        </svg>
-                        <span class="button__txt">Exit Game</span>
-                    </button>
-                </li>
             </ul>
         </nav>
     
         <main class="board__wrapper">
             <div class="board">
-                <div id="cell-50" class="board__header board__cell">
+                <div id="cell-50" class="board__header board__cell" role="0">
                     <input id="checker-50" type="checkbox" class="board__input" name="checker-50" disabled>
                     <label for="checker-50" class="board__checker"></label>
                 </div>
-                <div id="cell-51" class="board__header board__cell">
+                <div id="cell-51" class="board__header board__cell" role="1">
                     <input id="checker-51" type="checkbox" class="board__input" name="checker-51" disabled>
                     <label for="checker-51" class="board__checker"></label>
                 </div>
-                <div id="cell-52" class="board__header board__cell">
+                <div id="cell-52" class="board__header board__cell" role="2">
                     <input id="checker-52" type="checkbox" class="board__input" name="checker-52" disabled>
                     <label for="checker-52" class="board__checker"></label>
                 </div>
-                <div id="cell-53" class="board__header board__cell">
+                <div id="cell-53" class="board__header board__cell"  role="3">
                     <input id="checker-53" type="checkbox" class="board__input" name="checker-53" disabled>
                     <label for="checker-53" class="board__checker"></label>
                 </div>
-                <div id="cell-54" class="board__header board__cell">
+                <div id="cell-54" class="board__header board__cell" role="4">
                     <input id="checker-54" type="checkbox" class="board__input" name="checker-54" disabled>
                     <label for="checker-54" class="board__checker"></label>
                 </div>
-                <div id="cell-55" class="board__header board__cell">
+                <div id="cell-55" class="board__header board__cell" role="5">
                     <input id="checker-55" type="checkbox" class="board__input" name="checker-55" disabled>
                     <label for="checker-55" class="board__checker"></label>
                 </div>
-                <div id="cell-56" class="board__header board__cell">
+                <div id="cell-56" class="board__header board__cell" role="6">
                     <input id="checker-56" type="checkbox" class="board__input" name="checker-56" disabled>
                     <label for="checker-56" class="board__checker"></label>
                 </div>
@@ -273,7 +256,7 @@
             </div>
             <p class="text--small color--gray-5 pl-3">Copyright © 2022 Lab-Boole</p>
         </footer>
-        <dialog class="dialog__players">
+        <dialog id="dialog__players">
             <p>Select an option</p>
             <form method="dialog">
                 <button type="submit" value="2">Player<br>VS<br>Player</button>
@@ -284,7 +267,7 @@
         <dialog id="dialog-yes-no">
             <form method="dialog">
                 <h1 id="dialog-yes-no__title"></h1>
-                <p>Do you want to continue?</p>
+                <p>Do you want to play another game?</p>
                 <button type="submit" value="yes">Yes</button>
                 <button type="submit" value="no">No</button>
             </form>
